syntax = "proto3";

package pb;

service UserService{
    rpc Check(UserRequest) returns (UserResponse){}
}

message UserRequest {
    string username = 1;
    string password = 2;
}

message UserResponse {
    bool result = 1;
    int64 userId = 2;
    string err = 3;
}